<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cz.cvut.kbss</groupId>
    <artifactId>og-spipes</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>11</jdk.version>
        <maven.compiler.source>${jdk.version}</maven.compiler.source>
        <maven.compiler.target>${jdk.version}</maven.compiler.target>
        <!-- problem with murmurhash in 16 version -->
<!--        <cz.cvut.kbss.jopa.version>0.16.2</cz.cvut.kbss.jopa.version>-->
        <cz.cvut.kbss.jopa.version>0.19.3</cz.cvut.kbss.jopa.version>
        <!-- 8.2 is not working - cant cast current classes -->
        <cz.cvut.kbss.jb4jsonld.version>0.8.2</cz.cvut.kbss.jb4jsonld.version>
        <cz.cvut.kbss.s-pipes.forms.version>0.4.0</cz.cvut.kbss.s-pipes.forms.version>
        <org.eclipse.rdf4j.version>3.7.7</org.eclipse.rdf4j.version>
        <ch.qos.logback.version>1.2.10</ch.qos.logback.version>
        <com.github.galigator.openllet.version>2.6.4</com.github.galigator.openllet.version>
        <com.github.ledsoft.jopa-spring-transactions.version>0.1.2</com.github.ledsoft.jopa-spring-transactions.version>

        <org.springframework.version>5.3.1</org.springframework.version>
        <org.springframework.boot.version>2.4.0</org.springframework.boot.version>
    </properties>

    <repositories>
        <repository>
            <id>m2</id>
            <name>Maven 2 central Repository</name>
            <url>https://repo.maven.apache.org/maven2/</url>
            <snapshots>
                <checksumPolicy>ignore</checksumPolicy>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>kbss</id>
            <name>KBSS Maven 2 Repository</name>
            <url>https://kbss.felk.cvut.cz/m2repo</url>
            <snapshots>
                <checksumPolicy>ignore</checksumPolicy>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>topquadrant</id>
            <name>topquadrant Repository</name>
            <url>https://archive.topquadrant.com/repository/spin/</url>
            <snapshots>
                <checksumPolicy>ignore</checksumPolicy>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>cz.cvut.kbss.jopa</groupId>
            <artifactId>jopa-api</artifactId>
            <version>${cz.cvut.kbss.jopa.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>cz.cvut.kbss.jopa</groupId>
            <artifactId>jopa-impl</artifactId>
            <version>${cz.cvut.kbss.jopa.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>cz.cvut.kbss.jopa</groupId>
            <artifactId>ontodriver-jena</artifactId>
            <version>${cz.cvut.kbss.jopa.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- S-Pipes Forms -->
        <dependency>
            <groupId>cz.cvut.kbss</groupId>
            <artifactId>s-pipes-forms</artifactId>
            <version>${cz.cvut.kbss.s-pipes.forms.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.github.ledsoft</groupId>
            <artifactId>jopa-spring-transaction</artifactId>
            <version>${com.github.ledsoft.jopa-spring-transactions.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-tx</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>cz.cvut.kbss.jsonld</groupId>
            <artifactId>jb4jsonld-jackson</artifactId>
            <version>${cz.cvut.kbss.jb4jsonld.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>commons-codec</groupId>
                    <artifactId>commons-codec</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Spring Boot -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <version>${org.springframework.boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>${org.springframework.boot.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${org.springframework.boot.version}</version>
        </dependency>
<!--        TODO CHECK IF REQUIRED-->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
            <version>${org.springframework.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
            <version>${org.springframework.boot.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.3.2</version>
            <scope>test</scope>
        </dependency>

        <!--websocket Client-->
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.5.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.topbraid/shacl -->
        <dependency>
            <groupId>org.topbraid</groupId>
            <artifactId>shacl</artifactId>
            <version>1.3.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.topbraid/spin -->
        <dependency>
            <groupId>org.topbraid</groupId>
            <artifactId>spin</artifactId>
            <version>2.0.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.topbraid/spin -->
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-arq</artifactId>
            <version>3.17.0</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-rio-rdfjson</artifactId>
            <version>${org.eclipse.rdf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>com.vaadin.external.google</groupId>
            <artifactId>android-json</artifactId>
            <version>0.0.20131108.vaadin1</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.konghq</groupId>
            <artifactId>unirest-java</artifactId>
            <version>3.11.09</version>
            <classifier>standalone</classifier>
        </dependency>

        <dependency>
            <groupId>com.konghq</groupId>
            <artifactId>unirest-mocks</artifactId>
            <version>3.11.09</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
            </plugin>
            <plugin>
                <groupId>com.nickwongdev</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
                <version>1.12.6</version>
                <configuration>
                    <complianceLevel>${jdk.version}</complianceLevel>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <aspectLibraries>
                        <aspectLibrary>
                            <groupId>cz.cvut.kbss.jopa</groupId>
                            <artifactId>jopa-impl</artifactId>
                        </aspectLibrary>
                    </aspectLibraries>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjtools</artifactId>
                        <version>1.9.5</version>
                    </dependency>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjrt</artifactId>
                        <version>1.9.5</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>compile</goal>
                            <!-- use this goal to weave all your main classes -->
                            <goal>test-compile</goal>
                            <!-- use this goal to weave all your test classes -->
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${org.springframework.boot.version}</version>
                <configuration>
                    <mainClass>og_spipes.Main</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <overwrite>true</overwrite>
                            <outputDirectory>${basedir}/target/classes</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>profile</directory>
                                    <includes>
                                        <include>query/*.rq</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
<!--                <configuration>-->
<!--                    <reuseForks>false</reuseForks>-->
<!--                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
<!--                </configuration>-->
            </plugin>

        </plugins>
    </build>
</project>